Made css file and added some styling

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div class="row">
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light fixed-top">
                 <a class="navbar-brand" id="navbar" href="highscores.html">HighScores</a>
                 <div id="countdown" class="timer">70</div>
             </nav>
