--- a/index.html
+++ b/index.html
@@ -1,86 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-   
-    <link rel="stylesheet" href="assets/style.css"/>
+    <link rel="stylesheet" href="assets/style.css" />
     <title>Code Quiz</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <header>
-
-        <div class="row">
-
-            <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-                <a class="navbar-brand" id="navbar" href="scores.html">HighScores</a>
-                <div id="countdown" class="timer">70</div>
-            </nav>
-
-        </div>
-
+      <div class="row">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+          <a class="navbar-brand" id="navbar" href="scores.html">HighScores</a>
+          <div id="countdown" class="timer">70</div>
+        </nav>
+      </div>
     </header>
 
     <div class="container">
-
-        <div id="endgame-content">
-
-            <div class="jumbotron jumbotron-fluid">
-
-                <div class="container">
-
-                    <h1 class="display-4">Code Quiz</h1>
-                    <p class="lead" id="rules">
-                        You have 70 seconds to answer random multiple choice questions.
-                        If you choose the wrong answer and you will be deducted 7 seconds on the timer. 
-                        <br>
-                        <br>
-                        Good Luck!
-                    </p>
-
-                </div>
-
-            </div>
-        
-            <div class="row" id="quiz-start">
-                <button type="button" class="btn btn-primary" id="start-button">Start Quiz</button>
-            </div>
-        
-            <div class="quiz-questions">
-
-                <div class="row">
-                    <div id="question-number"></div>
-                </div>
-
-                <div class="row" id="answerSection"></div>
-                <p id="correct-message"></p>
-
-            </div>
-
+      <div id="endgame-content">
+        <div class="jumbotron jumbotron-fluid">
+          <div class="container">
+            <h1 class="display-4">Code Quiz</h1>
+            <p class="lead" id="rules">
+              You have 70 seconds to answer random multiple choice questions. If
+              you choose the wrong answer and you will be deducted 7 seconds on
+              the timer.
+              <br />
+              <br />
+              Good Luck!
+            </p>
+          </div>
         </div>
 
-        <div class="row invisible" id="form-row">
-
-            <form id="highscore-form" method="POST">
-
-                <label for="highscore-text">Add your Initials: </label>
-                <input type="text" placeholder="Add your name to the Code Quiz Highscores Page!" name="highscore-text" id="highscore-text" />
-                <button>Add your initials to the highscores</button>
-
-            </form>
-
+        <div class="row" id="quiz-start">
+          <button type="button" class="btn btn-primary" id="start-button">
+            Start Quiz
+          </button>
         </div>
 
+        <div class="quiz-questions">
+          <div class="row">
+            <div id="question-number"></div>
+          </div>
+
+          <div class="row" id="answerSection"></div>
+          <p id="correct-message"></p>
+        </div>
+      </div>
+
+      <div class="row invisible" id="form-row">
+        <form id="highscore-form" method="POST">
+          <label for="highscore-text">Add your Initials: </label>
+          <input
+            type="text"
+            name="highscore-text"
+            id="highscore-text"
+          />
+          <button>Add your initials to the highscores</button>
+        </form>
+      </div>
     </div>
 
-<script src="assets/script.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-</body>
-
+    <script src="assets/script.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
